unit2/lesson_3_c_basics/ex1_1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:11:31 **** Incremental Build of configuration Debug for project ex1_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ex1_1.o "..\\ex1_1.c" 
..\ex1_1.c: In function 'main':
..\ex1_1.c:12:16: error: 'Stdout' undeclared (first use in this function); did you mean 'stdout'?
   12 |         fflush(Stdout):
      |                ^~~~~~
      |                stdout
..\ex1_1.c:12:16: note: each undeclared identifier is reported only once for each function it appears in
..\ex1_1.c:12:23: error: expected ';' before ':' token
   12 |         fflush(Stdout):
      |                       ^
      |                       ;
15:11:39 **** Incremental Build of configuration Debug for project ex1_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ex1_1.o "..\\ex1_1.c" 
..\ex1_1.c: In function 'main':
..\ex1_1.c:12:16: error: 'Stdout' undeclared (first use in this function); did you mean 'stdout'?
   12 |         fflush(Stdout);
      |                ^~~~~~
      |                stdout
..\ex1_1.c:12:16: note: each undeclared identifier is reported only once for each function it appears in
..\ex1_1.c:13:17: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   13 |         scanf("%d",a);
      |                ~^  ~
      |                 |  |
      |                 |  int
      |                 int *
..\ex1_1.c:13:17: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   13 |         scanf("%d",a);
      |                ~^  ~
      |                 |  |
      |                 |  int
      |                 int *
15:11:47 **** Incremental Build of configuration Debug for project ex1_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ex1_1.o "..\\ex1_1.c" 
..\ex1_1.c: In function 'main':
..\ex1_1.c:12:16: error: 'Stdout' undeclared (first use in this function); did you mean 'stdout'?
   12 |         fflush(Stdout);
      |                ^~~~~~
      |                stdout
..\ex1_1.c:12:16: note: each undeclared identifier is reported only once for each function it appears in
15:11:57 **** Incremental Build of configuration Debug for project ex1_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ex1_1.o "..\\ex1_1.c" 
gcc -o ex1_1.exe ex1_1.o 
Info: Nothing to build for ex1_1
